syntax = "proto3";
package auth;

option go_package = "cu.ru/pb";

message AuthMessage {
    string login = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
}

service AuthService {
    rpc Auth(AuthMessage) returns (AuthResponse);
}
